--- a/webroot/css/layout.css
+++ b/webroot/css/layout.css
@@ -5,13 +5,14 @@
  */
 
 /**
- * CSS "constants"
+ * CSS "constants" cheat sheet
  *
  * RED 		= #D21034
  * BLUE		= #0089CF
  * GREEN	= #4B9B07
  * YELLOW	= #FFC726
  * DEEPBLUE	= #003581
+ * GREY		= #CCCCCC
  */
 
 
@@ -27,7 +28,6 @@
 .right { float:right; }
 .center { text-align:center; }
 .middle { vertical-align: middle; }
-.grey { color: #CCCCCC }
 .hidden { display: none; }
 .clear { clear:both; }
 .italic { font-style:italic; }
@@ -60,7 +60,7 @@ a:visited, a:hover, a:active { text-decoration:none; color: #0089CF; }
 /**
  * Alert box, Background and Container
  */
-#alert { background: #D21034; color: white; text-align: center; padding: 6px; font-weight: bold; }
+#alert { background: #D21034; color: white; text-align: center; padding: 6px; font-weight: bold; display:none; }
 #alert p { padding: 0px; margin: 0px; }
 #background { background: white; }
 #container { width: 750px; margin: 0 auto; padding: 0px 1px 20px 1px; background: none repeat scroll 0 0 #FFFFFF; }
@@ -104,7 +104,18 @@ a:visited, a:hover, a:active { text-decoration:none; color: #0089CF; }
 #menu ul li.deepblue a, #menu ul li.deepblue a:hover { color: #003581; border-bottom-color: #003581; }
 
 #menu #addNewContentButton { width: 100px; }
-	
+
+
+/**
+ * Content
+ */
+#content { font-size: 1em; float: left; margin: -10px 14px 0px 16px; }
+#content .narrow { width: 500px; }
+#content .wide { width: auto; }
+#content .column { width: 220px; float: left; margin: 0px 20px 0px 0px; }
+#content h2 { font-size: 1.7em; color: #000; padding: 0px 0px 10px 0px; margin: 10px 0px; }
+
+
 /**
  * Footer
  */
