--- a/webroot/css/contents/contents.css
+++ b/webroot/css/contents/contents.css
@@ -28,6 +28,6 @@
  * GREY		= #CCCCCC
  */
  
-#Contents-index-page h2 { font-size: 16px; color: #CCCCCC; padding: 0px 0px 10px 0px; }
-#Contents-index-page h2 img.minilogo { margin: 0px 5px 0px 5px; vertical-align: middle; }
-#Contents-index-page #content-list { font-size: 18px; margin-top: 15px; }
+#contents-index-page h2 { font-size: 16px; color: #CCCCCC; padding: 0px 0px 10px 0px; }
+#contents-index-page h2 img.minilogo { margin: 0px 5px 0px 5px; vertical-align: middle; }
+#contents-index-page #content-list { font-size: 18px; margin-top: 15px; }
