--- a/webroot/css/contents/index.css
+++ b/webroot/css/contents/index.css
@@ -28,11 +28,4 @@
  * GREY		= #CCCCCC
  */
  
-.rsslogo { height: 18px; width: 18px; padding-left: 5px; vertical-align: middle; }
- 
-#contents h2 { font-size: 18px; color: #CCCCCC; padding: 0px 0px 10px 0px; margin-top: 15px; }
-#contents h2 img.minilogo { margin: 0px 5px 0px 5px; vertical-align: middle; }
-#contents #content-list { font-size: 18px; margin-top: 15px; }
-
-/** Element styles */
-#signuplink { padding-bottom: 2px; text-align: center; }
+#index-page h2 { }
