--- a/webroot/css/layout.css
+++ b/webroot/css/layout.css
@@ -34,6 +34,14 @@
 .column { width:220px; float:left; margin:0px 20px 10px 0px; }
 .nolist { word-wrap: break-word; }
 .nolist ul { list-style: none outside none; }
+.pointerCursor { cursor: pointer; }
+.icon_plusminus { vertical-align: text-top; }
+.blockLink { display: block; width: 100%; height: 100%; }
+.bodyColor { color: #333333; }
+.hoverLink:hover { background: none repeat scroll 0 0 #F2F2F2; cursor: pointer; }
+.shrinkFont { font-size: 0.9em; }
+.shrinkFontMore { font-size: 0.85em; }
+.shrinkFontMost { font-size: 0.8em; }
 
 p { margin: 10px 0; }
 
@@ -156,3 +164,10 @@ a:visited, a:hover, a:active { text-decoration:none; color: #0089CF; }
 #flash { background: #000; color: white; text-align: center; font-weight: bold;  z-index: 99999; width: 300px;  position: fixed; margin-left: -150px; left: 50%; display: none; }
 #flash .flashBox  { padding: 6px; }
 #flash #successfull_operation { background: #4B9B07; }
+
+/** Element styles */
+#signuplink { padding-bottom: 2px; text-align: center; }
+.border-vision { border-left: 5px solid #FFC726; padding: 0 0 0 10px !important; }
+.border-idea { border-left: 5px solid #4B9B07; padding: 0 0 0 10px !important; }
+.border-challenge { border-left: 5px solid #D21034; padding: 0 0 0 10px !important; }
+.border-campaign { border-left: 5px solid #003581; padding: 0 0 0 10px !important; }
