--- a/webroot/css/layout.css
+++ b/webroot/css/layout.css
@@ -50,8 +50,10 @@
 .small-padding-top-bottom { padding: 3px 0px; }
 .small-padding-left-right { padding: 0px 3px; }
 .force-small-padding { padding: 4px !important; }
-.green { color: #4B9B07; }
-.red { color: #D21034; }
+.green { color: #4B9B07 !important; }
+.red { color: #D21034 !important; }
+.blue { color: #0089CF !important; }
+.deepblue { color: #003581 !important; }
 
 p { margin: 10px 0; }
 
@@ -177,10 +179,10 @@ a:visited, a:hover, a:active { text-decoration:none; color: #0089CF; }
 
 /** Element styles */
 #signuplink { padding-bottom: 2px; text-align: center; }
-.border-vision { border-left: 5px solid #FFC726; padding: 0 0 0 10px; }
-.border-idea { border-left: 5px solid #4B9B07; padding: 0 0 0 10px; }
-.border-challenge { border-left: 5px solid #D21034; padding: 0 0 0 10px; }
-.border-campaign { border-left: 5px solid #003581; padding: 0 0 0 10px; }
+.border-vision { border-left: 5px solid #FFC726; padding: 0 0 0 10px !important; }
+.border-idea { border-left: 5px solid #4B9B07; padding: 0 0 0 10px !important; }
+.border-challenge { border-left: 5px solid #D21034; padding: 0 0 0 10px !important; }
+.border-campaign { border-left: 5px solid #003581; padding: 0 0 0 10px !important; }
 #PrivateMessageForm label { display: block; float: left; font-weight: bold; width: 70px; }
 .gift { background: url("../img/cake.icon.png") no-repeat scroll 10px transparent; }
 .favourite_off { background: url("../img/icon_fav_off.png") no-repeat scroll 10px transparent; }
