--- a/webroot/css/layout.css
+++ b/webroot/css/layout.css
@@ -159,11 +159,16 @@ a:visited, a:hover, a:active { text-decoration:none; color: #0089CF; }
  * Content
  */
 #content { font-size: 1em; float: left; margin: -10px 14px 0px 16px; }
-#content .narrow { width: 500px; }
-#content .wide { width: 735px; }
+#content .contentWithSidebar,
+#content .contentWithTopAndSidebar { width: 500px; }
+#content .contentWithFullPage { width: 735px; }
 #content .column { width: 220px; float: left; margin: 0px 20px 0px 0px; }
 #content h2 { font-size: 1.7em; color: #000; padding: 0px 0px 10px 0px; margin: 10px 0px; }
 
+/**
+ * Content top
+ */
+#content-top { margin:0px 2px 10px 2px; }
 
 /**
  * Footer
