--- a/webroot/css/layout.css
+++ b/webroot/css/layout.css
@@ -124,7 +124,8 @@ a:visited, a:hover, a:active { text-decoration:none; color: #0089CF; }
 #login_box a {
     color: #0089CF !important;
     text-decoration: none;
-    float: right;
+    float: left;
+    padding: 0 0 0 10px;
 }
 
 #login_box .submit {
